--- a/Ansible/ansible_collections/jfrog/platform/roles/artifactory/vars/all.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/artifactory/vars/all.yml
@@ -3,3 +3,6 @@ platform_collection_version: 10.18.2
 
 # indicates where this collection was downloaded from (galaxy, automation_hub, standalone)
 ansible_marketplace: galaxy
+
+# Artifactory system service name
+artifactory_daemon: artifactory
