--- a/Ansible/ansible_collections/jfrog/platform/roles/artifactory/tasks/upgrade.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/artifactory/tasks/upgrade.yml
@@ -1,182 +1,75 @@
-- name: Configure SELinux context
-  ansible.builtin.include_tasks: shared/selinux_configure_context.yml
+---
+- name: Include tasks to configure prerequisites 
+  ansible.builtin.include_tasks: 'shared/prerequisites.yml'
 
-- name: Allow using crontab
-  ansible.builtin.lineinfile:
-    path: /etc/cron.allow
-    line: "{{ artifactory_user }}"
-    state: present
-  when: artifactory_allow_crontab
+- name: Include tasks to apply and restore SELinux contexts on RHEL based systems
+  ansible.builtin.include_tasks: 'shared/selinux.yml'
+  when: ansible_facts['os_family'] | lower == 'redhat'
 
-- name: Allow reading cron.allow
-  ansible.builtin.file:
-    path: /etc/cron.allow
-    mode: 0644
-  when: artifactory_allow_crontab
+- name: Include tasks to download and extract artifactory archive
+  ansible.builtin.include_tasks: 'shared/get_archive.yml'
 
-- name: Check if artifactory tar already exists
+- name: Upgrade Artifactory
   become: true
-  ansible.builtin.stat:
-    path: "{{ jfrog_home_directory }}/{{ artifactory_tar_file_name }}"
-  register: artifactory_tar_check
+  block:
 
-- name: Download artifactory for upgrade
-  become: true
-  ansible.builtin.get_url:
-    url: "{{ artifactory_tar }}"
-    timeout: "{{ artifactory_download_timeout }}"
-    dest: "{{ jfrog_home_directory }}"
-  register: download_artifactory
-  until: download_artifactory is succeeded
-  retries: 3
-  when: not artifactory_tar_check.stat.exists
+    - name: Ensure artifactory is stopped
+      become: true
+      ansible.builtin.systemd_service:
+        name: "{{ artifactory_daemon }}"
+        state: stopped
+      when: unarchived_artifactory is changed
 
-- name: Extract artifactory tar
-  become: true
-  ansible.builtin.unarchive:
-    src: "{{ jfrog_home_directory }}/{{ artifactory_tar_file_name }}"
-    dest: "{{ jfrog_home_directory }}"
-    remote_src: true
-    owner: "{{ artifactory_user }}"
-    group: "{{ artifactory_group }}"
-    creates: "{{ artifactory_untar_home }}"
-  register: unarchived_artifactory
-  when:
-    - not ansible_check_mode
-    - download_artifactory is succeeded
-  notify: Stop artifactory
+    - name: Check artifactory version
+      ansible.builtin.fetch:
+        src: "{{ artifactory_home }}/app/artifactory.product.version.properties"
+        dest: "/tmp/artifactory.product.version.properties"
+        flat: true
+      changed_when: false
 
-- name: Stop artifactory
-  ansible.builtin.meta: flush_handlers
+    - name: Set running_version
+      ansible.builtin.set_fact:
+        running_version: "{{ lookup('ansible.builtin.ini', 'artifactory.product.version', type='properties', file='/tmp/artifactory.product.version.properties') }}"
 
-- name: Ensure jfrog_home_directory exists
-  become: true
-  ansible.builtin.file:
-    mode: 0755
-    path: "{{ jfrog_home_directory }}"
-    state: directory
+    - name: Delete old artifactory app directory
+      ansible.builtin.file:
+        path: "{{ artifactory_home }}/app"
+        state: absent
+      when: running_version != artifactory_version
 
-- name: Check artifactory version
-  ansible.builtin.fetch:
-    src: "{{ artifactory_home }}/app/artifactory.product.version.properties"
-    dest: "/tmp/artifactory.product.version.properties"
-    flat: true
-  changed_when: false
+    - name: Copy new artifactory app directory
+      ansible.builtin.command: "cp -r {{ artifactory_untar_home }}/app/. {{ artifactory_home }}/app"
+      notify: Restart artifactory
+      when: running_version != artifactory_version
 
-- name: Set running_version
-  ansible.builtin.set_fact:
-    running_version: "{{ lookup('ansible.builtin.ini', 'artifactory.product.version', type='properties', file='/tmp/artifactory.product.version.properties') }}"
+- name: Include tasks to apply artifactory templates
+  ansible.builtin.include_tasks: 'shared/templates.yml'
 
-- name: Delete artifactory app directory
-  become: true
-  ansible.builtin.file:
-    path: "{{ artifactory_home }}/app"
-    state: absent
-  when: running_version != artifactory_version
+- name: Include tasks to configure JDBC driver
+  ansible.builtin.include_tasks: 'shared/jdbc_driver.yml'
 
-- name: Copy new app to artifactory app
-  become: true
-  ansible.builtin.command: "cp -r {{ artifactory_untar_home }}/app/. {{ artifactory_home }}/app"
-  when: running_version != artifactory_version
-  notify: Restart artifactory
+- name: Include tasks to install Artifactory service
+  ansible.builtin.include_tasks: 'shared/all.yml'
 
-- name: Configure artifactory license(s)
-  become: true
-  ansible.builtin.template:
-    src: artifactory.cluster.license.j2
-    dest: "{{ artifactory_home }}/var/etc/artifactory/artifactory.cluster.license"
-    mode: 0644
-  when:
-    - artifactory_licenses is defined
-    - artifactory_licenses | length > 0
-  notify: Restart artifactory
+- name: Include tasks to install artifactory service
+  ansible.builtin.include_tasks: 'shared/install_service.yml'
 
-- name: Check if included database driver is the correct version
-  become: true
-  ansible.builtin.stat:
-    path: "{{ artifactory_home }}/app/artifactory/tomcat/lib/postgresql-{{ postgres_driver_version }}.jar"
-  register: included_database_driver
+- name: Include tasks to apply and restore SELinux contexts on RHEL based systems
+  ansible.builtin.include_tasks: 'shared/selinux.yml'
+  when: ansible_facts['os_family'] | lower == 'redhat'
 
-- name: Check if jdbc driver exists
-  become: true
-  ansible.builtin.stat:
-    path: "{{ artifactory_home }}/app/artifactory/tomcat/lib/jf_postgresql-{{ postgres_driver_version }}.jar"
-  register: database_driver
-
-- name: Download jdbc driver
-  become: true
-  ansible.builtin.get_url:
-    url: "{{ postgres_driver_download_url }}"
-    dest: "{{ artifactory_home }}/var/bootstrap/artifactory/tomcat/lib"
-    owner: "{{ artifactory_user }}"
-    group: "{{ artifactory_group }}"
-  when:
-    - postgres_driver_download_url is defined
-    - not database_driver.stat.exists
-    - not included_database_driver.stat.exists
-    - postgres_driver_download | bool
-  notify: Restart artifactory
-
-- name: Configure installer info
-  become: true
-  ansible.builtin.template:
-    src: installer-info.json.j2
-    dest: "{{ artifactory_home }}/var/etc/artifactory/info/installer-info.json"
-    mode: 0644
-  notify: Restart artifactory
-
-- name: Configure binary store
-  become: true
-  ansible.builtin.template:
-    src: binarystore.xml.j2
-    dest: "{{ artifactory_home }}/var/etc/artifactory/binarystore.xml"
-    mode: 0644
-  when:
-    - artifactory_binarystore is defined
-    - artifactory_binarystore | length > 0
-  notify: Restart artifactory
-
-- name: Check if system.yaml exists
-  become: true
-  ansible.builtin.stat:
-    path: "{{ artifactory_home }}/var/etc/system.yaml"
-  register: systemyaml
-
-- name: Configure system.yaml
-  become: true
-  ansible.builtin.template:
-    src: "{{ artifactory_system_yaml_template }}"
-    dest: "{{ artifactory_home }}/var/etc/system.yaml"
-    mode: 0644
-  when:
-    - artifactory_systemyaml is defined
-    - artifactory_systemyaml | length > 0
-    - artifactory_systemyaml_override or (not systemyaml.stat.exists)
-  notify: Restart artifactory
-
-- name: Install Service
-  ansible.builtin.include_tasks: shared/install_service.yml
-
-- name: Restore SELinux content
-  ansible.builtin.include_tasks: shared/selinux_restore_context.yml
-
-- name: Ensure permissions are correct
-  ansible.builtin.include_tasks: shared/ensure_permissions_correct.yml
+- name: Include tasks to fix files ownership
+  ansible.builtin.include_tasks: 'shared/permissions.yml'
 
 - name: Restart artifactory
   ansible.builtin.meta: flush_handlers
-  when:
-    - artifactory_start_service | bool
 
-- name: Make sure artifactory is up and running
-  ansible.builtin.uri:
-    url: http://127.0.0.1:8082/router/api/v1/system/health
-    timeout: 130
-    status_code: 200
-  register: result
-  until: result is succeeded
-  retries: 25
-  delay: 5
-  when:
-    - not ansible_check_mode
-    - artifactory_start_service | bool
+- name: Ensure artifactory service is started and enabled
+  become: true
+  ansible.builtin.systemd_service:
+    name: "{{ artifactory_daemon }}"
+    state: started
+    enabled: true
+
+- name: Include tasks to ensure artifactory is up and running
+  ansible.builtin.include_tasks: 'shared/upcheck.yml'
