--- a/Ansible/ansible_collections/jfrog/platform/roles/postgres/meta/main.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/postgres/meta/main.yml
@@ -6,18 +6,19 @@ galaxy_info:
   description: "The postgres role will install Postgresql software and configure a database and user to support an Artifactory or Xray server."
   company: JFrog
   issue_tracker_url: "https://github.com/jfrog/JFrog-Cloud-Installers/issues"
-  license: license (Apache-2.0)
-  min_ansible_version: 2.9
+  license: 'license (Apache-2.0)'
+  min_ansible_version: '2.9'
   platforms:
     - name: EL
       versions:
-        - 7
-        - 8
+        - '8'
+        - '9'
     - name: Ubuntu
       versions:
         - bionic
         - focal
         - jammy
+        - noble
     - name: Debian
       versions:
         - buster
