fix default var

--- a/Ansible/ansible_collections/jfrog/platform/roles/postgres/defaults/main.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/postgres/defaults/main.yml
@@ -108,7 +108,7 @@ postgresql_databases_users:
     userpass: "{{ artifactory_db_user_pass | d('yRQBPdbTsYVd9MFqBBnbrh') }}"
     userpass_encrypted: "{{ artifactory_db_user_pass_encrypted | d('true') }}"
     userprivs: "{{ artifactory_db_user_privs | d(['ALL']) }}"
-    owner: "{{ artifactory_db_owner | d(postgresql_databases.artifactory.user) }}"
+    owner: "{{ artifactory_db_owner | d(postgresql_databases_users.artifactory.username) }}"
     lc_collate: "{{ artifactory_db_lc_collate | d(postgresql_locale) }}"
     lc_ctype: "{{ artifactory_db_lc_ctype | d(postgresql_locale) }}"
     encoding: "{{ artifactory_db_encoding | d('UTF-8') }}"
@@ -132,7 +132,7 @@ postgresql_databases_users:
     userpass: "{{ xray_db_user_pass | d('mYT5izjC4XkDmafv7wUbs4') }}"
     userpass_encrypted: "{{ xray_db_user_pass_encrypted | d('true') }}"
     userprivs: "{{ xray_db_user_privs | d(['ALL']) }}"
-    owner: "{{ xray_db_owner | d(postgresql_databases.xray.user) }}"
+    owner: "{{ xray_db_owner | d(postgresql_databases_users.xray.username) }}"
     lc_collate: "{{ xray_db_lc_collate | d(postgresql_locale) }}"
     lc_ctype: "{{ xray_db_lc_ctype | d(postgresql_locale) }}"
     encoding: "{{ xray_db_encoding | d('UTF-8') }}"
@@ -156,7 +156,7 @@ postgresql_databases_users:
     userpass: "{{ distribution_db_user_pass | d('XSaP2U8BSCAmLrek4Hb7Vx') }}"
     userpass_encrypted: "{{ distribution_db_user_pass_encrypted | d('true') }}"
     userprivs: "{{ distribution_db_user_privs | d(['ALL']) }}"
-    owner: "{{ distribution_db_owner | d(postgresql_users.distribution.user) }}"
+    owner: "{{ distribution_db_owner | d(postgresql_databases_users.distribution.username) }}"
     lc_collate: "{{ distribution_db_lc_collate | d(postgresql_locale) }}"
     lc_ctype: "{{ distribution_db_lc_ctype | d(postgresql_locale) }}"
     encoding: "{{ distribution_db_encoding | d('UTF-8') }}"
@@ -180,7 +180,7 @@ postgresql_databases_users:
     userpass: "{{ insight_db_user_pass | d('JJ49gTYWzFA5psTjyy5bFu') }}"
     userpass_encrypted: "{{ insight_db_user_pass_encrypted | d('true') }}"
     userprivs: "{{ insight_db_user_privs | d(['ALL']) }}"
-    owner: "{{ insight_db_owner | d(postgresql_users.insight.user) }}"
+    owner: "{{ insight_db_owner | d(postgresql_databases_users.insight.username) }}"
     lc_collate: "{{ insight_db_lc_collate | d(postgresql_locale) }}"
     lc_ctype: "{{ insight_db_lc_ctype | d(postgresql_locale) }}"
     encoding: "{{ insight_db_encoding | d('UTF-8') }}"
