--- a/Ansible/ansible_collections/jfrog/platform/roles/insight/tasks/upgrade-searchguard.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/insight/tasks/upgrade-searchguard.yml
@@ -5,7 +5,7 @@
     state: directory
     owner: elasticsearch
     group: elasticsearch
-    mode: 0755
+    mode: '0755'
 
 - name: Copy elasticsearch cert files
   become: true
@@ -14,7 +14,7 @@
     dest: "{{ insight_es_conf_base }}/{{ item }}"
     owner: elasticsearch
     group: elasticsearch
-    mode: 0600
+    mode: '0600'
   loop:
     - "localhost.pem"
     - "localhost.key"
@@ -48,7 +48,7 @@
     dest: "{{ insight_es_searchgaurd_home }}/tools/{{ item }}"
     owner: elasticsearch
     group: elasticsearch
-    mode: 0600
+    mode: '0600'
   loop:
     - "sgadmin.pem"
     - "sgadmin.key"
@@ -61,7 +61,7 @@
     dest: "{{ insight_es_searchgaurd_home }}/sgconfig/{{ item }}"
     owner: elasticsearch
     group: elasticsearch
-    mode: 0600
+    mode: '0600'
   loop:
     - "sg_roles.yml"
     - "sg_roles_mapping.yml"
@@ -73,4 +73,4 @@
     path: "{{ insight_es_searchgaurd_home }}/tools/sgadmin.sh"
     owner: elasticsearch
     group: elasticsearch
-    mode: 0700
+    mode: '0700'
