--- a/Ansible/ansible_collections/jfrog/platform/roles/xray/tasks/rabbitmq/setup/RedHat.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/xray/tasks/rabbitmq/setup/RedHat.yml
@@ -31,7 +31,7 @@
 
 - name: Install socat package
   become: true
-  ansible.builtin.yum:
+  ansible.builtin.dnf:
     name: "{{ xray_socat_package }}"
     state: present
   vars:
@@ -66,7 +66,7 @@
 
 - name: Install erlang package
   become: true
-  ansible.builtin.yum:
+  ansible.builtin.dnf:
     name: "{{ xray_erlang_package }}"
     state: present
     disable_gpg_check: true
