--- a/Ansible/ansible_collections/jfrog/platform/roles/xray/tasks/rabbitmq/upgrade/RedHat.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/xray/tasks/rabbitmq/upgrade/RedHat.yml
@@ -25,7 +25,7 @@
 
 - name: Install erlang package
   become: true
-  ansible.builtin.yum:
+  ansible.builtin.dnf:
     name: "{{ xray_erlang_package }}"
     state: present
     disable_gpg_check: true
